--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+## IMPORTANT NOTE 
+This repo indirectly tracks https://github.com/asterisk/dahdi-linux. Do
+not open issues with asterisk/dahdi-linux for problems with
+packages provided by AllStarLink
+
+## DAHDI Readme
+
 DAHDI Telephony Interface Driver
 =================================
 Asterisk Development Team <asteriskteam@digium.com>
