--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-dahdi-linux (1:3.2.0+asl-8) UNRELEASED; urgency=medium
+dahdi-linux (1:3.3.0-1+asl) unstable; urgency=medium
 
-  * Native Dahdi 3.2.0 
+  * Native Dahdi 3.3.0 
 
- -- Jason McCormick <jason@mfamily.org>  Fri, 22 Sep 2023 13:37:47 -0400
+ -- Jason McCormick <jason@mfamily.org>  Sun, 11 Feb 2024 15:25:55 -0500
 
 dahdi-linux (1:3.1.0+git20230717~dfsg-5) unstable; urgency=medium
 
