--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dahdi-linux (1:3.3.0-3+asl) unstable; urgency=medium
+
+  * Skinny build 
+
+ -- Jason McCormick <jason@mfamily.org>  Mon, 12 Feb 2024 19:42:37 -0500
+
 dahdi-linux (1:3.3.0-1+asl) unstable; urgency=medium
 
   * Native Dahdi 3.3.0 
