--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dahdi-linux (1:3.3.0-4+asl) unstable; urgency=medium
+
+  * Updated build process for per-Deb-rel files
+
+ -- Jason McCormick <jason@mfamily.org>  Sat, 30 Mar 2024 14:42:31 -0400
+
 dahdi-linux (1:3.3.0-3+asl) unstable; urgency=medium
 
   * Skinny build 
