--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dahdi-linux (1:3.3.0-5+asl) unstable; urgency=medium
+
+  * Auto-builder
+
+ -- Jason McCormick <jason@mfamily.org>  Fri, 03 May 2024 18:13:53 -0400
+
 dahdi-linux (1:3.3.0-4+asl) unstable; urgency=medium
 
   * Updated build process for per-Deb-rel files
