--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dahdi-linux (1:3.4.0-1+asl) unstable; urgency=medium
+
+  * DAHDI 3.4.0
+  * Add autopatch/VOX-releated fixes
+
+ -- Jason McCormick <jason@mfamily.org>  Wed, 11 Sep 2024 18:56:52 -0400
+
 dahdi-linux (1:3.3.0-5+asl) unstable; urgency=medium
 
   * Auto-builder
