--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dahdi-linux (1:3.4.0-2+asl) unstable; urgency=medium
+
+  * Fix version string
+
+ -- Jason McCormick <jason@mfamily.org>  Wed, 11 Sep 2024 19:24:30 -0400
+
 dahdi-linux (1:3.4.0-1+asl) unstable; urgency=medium
 
   * DAHDI 3.4.0
