--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dahdi-linux (1:3.4.0-5+asl) unstable; urgency=medium
+
+  * Remove BUILD_EXCLUSIVE_CONFIG for PCI/USB
+
+ -- Jason McCormick <jason@mfamily.org>  Fri, 03 Jan 2025 16:50:54 -0500
+
 dahdi-linux (1:3.4.0-4+asl) unstable; urgency=medium
 
   * Fix version string
