--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dahdi-linux (1:3.4.0-7.asl) unstable; urgency=medium
+
+  * Change package format release pattern
+
+ -- Jason McCormick <jason@mfamily.org>  Sun, 10 Aug 2025 19:13:53 -0400
+
 dahdi-linux (1:3.4.0-6+asl) unstable; urgency=medium
 
   * Backport PRs 64, 66 for kernel 6.11 support 
