--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dahdi-linux (1:3.4.0-9.asl) unstable; urgency=medium
+
+  * Update dependencies to support Trixie properly
+
+ -- Jason McCormick <jason@mfamily.org>  Tue, 14 Oct 2025 18:46:25 -0400
+
 dahdi-linux (1:3.4.0-8.asl) unstable; urgency=medium
 
   * Fix packaging changelog bug
